fixtures/frontend/milestone-2/invalid/source-contract-missing-type/main.aivi
type HttpError =
  | Timeout
  | DecodeFailure Text

type User = {
    id: Int,
    name: Text
}

type DecodeMode =
  | Strict
  | Permissive

domain Duration over Int
    suffix sec : Int = value => Duration value

domain Repeat over Int
    suffix times : Int = value => Repeat value

@source http.get "/users" with {
    decode: Strict,
    retry: 3times,
    timeout: 5sec
}
signal users : Signal (Result HttpError (List User))
